# reccos-capital

./: .gitignore  .replit  build_static.py  main_app.py  pnpm-lock.yaml  push_to_github.sh  pyproject.toml  reccos.db  replit.md  startup.py
.github/workflows/: deploy.yml
artifacts/api-server/src/: index.ts
artifacts/reccos-capital/: index.html  package.json  reccos.db
artifacts/reccos-capital/.replit-artifact/: artifact.toml
scripts/: create_workflow.py  push_workflow.mjs
templates/: landing.html  login.html
templates/admin/: index.html
templates/subscriber/: base.html  broker.html  market.html  portfolio.html  settings.html  strategies.html
