[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-mail>=0.10.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
]
